@@ -19,7 +19,7 @@
 
 TEMPLATE = app
 TARGET = tinymount
-VERSION = 0.2.0
+VERSION = 0.2.2
 
 DEPENDPATH += .
 INCLUDEPATH += .
