@@ -1,3 +1,7 @@
+TinyMount-0.2.2
+---------------
+  - Add libnotify support.
+
 TinyMount-0.2.0
 ---------------
   Second release (stabilized after several betas):
